# pymusictheory

./: .gitignore  README.md  main.py  pyproject.toml
src/pymusictheory/: __init__.py
tests/: test_pymusictheory.py
