[project]
name = "pymusictheory"
version = "2.2.2"
description = "A python library for doing calculations with musical notes."
readme = "README.md"
authors = [{ name = "Valter Schütz", email = "valterschutz@proton.me" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/valterschutz/pymusictheory"


[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymusictheory"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.mypy]
strict = true
